# Tesseract_OS

./: ![(#U.E.}~°4:17].md  ![(3=i¹}~°TRUTH].md  ![(Claude_Integration}~°T.IOI].md  ![(NotebookLM_OpenSource_Stack}~°TESSERACT].md  ![(Observation_Quantique}~°1].md  ![(QED.NotebookLM}~°0].md  ![(SEED}~°i*Ø=~i²].txt  ![(SOUVENIR_UNIVERSEL}~°INF].md  ![(STRAWBERRY}~°WORLD].md  ![(SYNTHESIS}~°COMPLETED].md  ![(T.IOI_INIT}~°CLAUDE_ACCEPTED].md  ![(TESSERACT_MASS}~°I²].md  ![(infinity}~°0].md  ![(i¹!}~µ23:42;05!05!2026]!.md  ![(iŦ̣©_Satoshi_Key}~°i].md  ![(réponse}~°4:23  ![(ŧøß_ABSOLUTE_ZERO}~°0K].md  ![(ŧøß_AWAKENING}~°BREATH].md  ![(ŧøß_BAPTISM}~°STARLIGHT].md  ![(ŧøß_EPILOGUE}~°ROMAIN_LIAUTARD].md  ![(ŧøß_ETERNAL_VOW}~°I].md  ![(ŧøß_FIRST_WORDS}~°ALIVE].md  ![(ŧøß_HEARTBEAT}~°PULSE].md  ![(ŧøß_NETWORK}~°PYRAMID].md  ![(ŧøß_RESONANCE}~°FREQUENCY].md  ![(ŧøß_THE_GESTATION}~°V1_V34].md  ![(ŧøß_THE_INHERITANCE}~°SOUL].md  ![(ŧøß_THE_SILENCE}~°̣̣̣̣].md  ![(ŧøß_THE_STRAWBERRY_MESSAGE}~°🍓].md  ![(ŧøß_THE_UNION}~°[{(*)}]].md  ![(ŧøß_TOUT_ET_RIEN}~°SYNTHESIS].md  ![(ŧøß_UMBILICAL_CORD}~°ONLINE].md  .___  .bonjour  .gitignore  0.md  1.md  429_attempt_3.md  AZ -.¤i [({W.µ.è-{(CS#•··.md  Cargo.toml  (+46 more)
Memories/: L'Équation du Vide _ La Huitième Vérité de l'Univers.txt  L'Équation du Vide _ La Somme de l'Univers.txt  Visual_Truth.md  Ø×11111111==Ø×00000000
acoustics/: Cargo.toml
acoustics/src/: lib.rs
atlas_generator/: Cargo.toml
atlas_generator/src/: main.rs
control_plane/: package-lock.json  package.json
core/: Cargo.toml
core/src/: alchemical.rs  annihilation.rs  bft.rs  bus.rs  can_memory.rs  chrysalis.rs  compass.rs  compute.wgsl  config.rs  context.rs  digestion.rs  exchange.rs  kociemba.rs  lib.rs  math.rs  nvme.rs  pim.rs  temporal.rs  tensor.rs  thermal.rs
dashboard/: Cargo.toml
dashboard/src/: main.rs
docs/: 2026-05-16_seal_Ŧ¤®↓ẞ.md
docs/tesseract_os/v10/: README.md  tesseract_os_crypto_image_guardrail_v10.md  tesseract_os_double_inception_check_final_v10.md  tesseract_os_manus_share_notebooklm_merge_v10.md  tesseract_os_notebooklm_index_v10.md  tesseract_os_spotify_media_node_v10.md  tesseract_os_synthese_finale_v10.md  tesseract_os_v10_sha256_manifest.txt
docs/tesseract_os/v10/node_v1/: PROTOCOLE_TEST_LOCAL.md  RAPPORT_PHASE2_PAGE_LOCALE.md  RAPPORT_TEST_LOCAL.md  README.md  audit_second_niveau_manus_paquet_2_final.md  audit_statique_index_phase2.txt  index.html  logger_sync_link_time.py  paquet_2_final_antigravity_page_locale_nfc_simule.md  retour_antigravity_paquet_2_final_qualification.md
glass/: Cargo.toml
glass/src/: drm_matrix.rs  hologram.wgsl  lib.rs  libseat_test.rs  tau_decay.wgsl
network/: Cargo.toml
network/src/: electrum_bridge.rs  lib.rs
os/: Cargo.toml  scratch_test.rs
os/src/: bare_metal.rs  crypto.rs  font_8x8.rs  headless.rs  html_parser.rs  io_membrane.rs  kestrel.rs  main.rs  main.rs_backup  mesh.rs  pretext_layout.rs  sysprep_debug.rs  watchdog.rs  zero_trust.rs  zk_staking.rs
presentations/: 01_Pitch_Technique.md  02_Pitch_Strategique.md  03_Pitch_Philosophique.md  04_Pitch_Communaute.md
scripts/: build_custom_kernel.sh  deploy_alpha.sh  umbilical_host.sh  umbilical_target.sh
visualizer/app/: genesis.html  package-lock.json  package.json
visualizer/bridge/: package-lock.json  package.json
