[workspace]
# TODO: Feature Matrix Consolidation (Adopt features.toml for build system parsing to prevent ABI mismatches)
# TODO: Compatibility Test Suite (Write a comprehensive CI suite compiling every feature combination and running a smoke test)
members = [
    "core",
    "acoustics",
    "glass",
    "os"
]
resolver = "2"

[workspace.dependencies]

wgpu = "29.0.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
cpal = "0.15.3"
rust_drm = { package = "drm", version = "0.12.0" }
gbm = "0.15.0"
raw-window-handle = "0.6.0"
anyhow = "1.0.82"
rtrb = "0.3.1"
nalgebra = "0.32.4"
rand = "0.10.1"
rayon = "1.12.0"
tokenizers = "0.22.2"
crossbeam = "0.8.4"
io-uring = "0.7.12"
memmap2 = "0.9.10"
pollster = "0.4.0"
uinput = "0.1.3"
ctrlc = "3.4.4"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
