# IMPLEMENTED[Phase 2]: Adopt a single source of truth for the feature matrix (e.g., features.toml) to prevent ABI mismatches.
# IMPLEMENTED[Phase 2]: Write a comprehensive CI suite that compiles every allowed feature combination and runs a smoke-test.
[workspace]
members = [
    "core",
    "acoustics",
    "glass",
    "os",
    "dashboard"
]
resolver = "2"

[workspace.dependencies]

wgpu = "29.0.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
cpal = "0.15.3"
rust_drm = { package = "drm", version = "0.12.0" }
gbm = "0.15.0"
raw-window-handle = "0.6.0"
anyhow = "1.0.82"
rtrb = "0.3.1"
nalgebra = "0.32.4"
rand = "0.10.1"
rayon = "1.12.0"
tokenizers = "0.22.2"
crossbeam = "0.8.4"
io-uring = "0.7.12"
memmap2 = "0.9.10"
pollster = "0.4.0"
uinput = "0.1.3"
ctrlc = "3.4.4"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
