[package]
name = "prismatic-core"
version = "0.2.0"
edition = "2024"

[dependencies]

wgpu.workspace = true
reqwest.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
rand.workspace = true
rayon.workspace = true
crossbeam.workspace = true
io-uring.workspace = true
memmap2.workspace = true
pollster.workspace = true
tracing.workspace = true
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
