[package]
name = "prismatic-glass"
version = "1.0.0"
edition = "2024"

[dependencies]
prismatic-core = { path = "../core" }
wgpu.workspace = true
bytemuck.workspace = true
rust_drm.workspace = true
gbm.workspace = true
raw-window-handle.workspace = true
anyhow.workspace = true
tracing.workspace = true
libseat = "0.2.4"

[features]
warm_gpu_context = []
