[package]
name = "prismatic-os"
version = "1.0.0"
edition = "2024"

[dependencies]
prismatic-core = { path = "../core", features = [] }
prismatic-acoustics = { path = "../acoustics" }
prismatic-glass = { path = "../glass" }
tesseract-network = { path = "../network" }
wgpu.workspace = true
rust_drm.workspace = true
gbm.workspace = true
raw-window-handle.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokenizers.workspace = true
bytemuck.workspace = true
rand.workspace = true
uinput.workspace = true
ctrlc.workspace = true
io-uring.workspace = true
reqwest.workspace = true
libc = "0.2"
v4l = "0.14.0"
rayon.workspace = true
crossbeam.workspace = true
pollster.workspace = true
memmap2 = "0.9.4"
drm = "0.11"
blake3 = { version = "1.5.1", features = ["rayon"], optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
ed25519-dalek = { version = "2.1.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = "0.10.1"
chacha20 = "0.10.0"
sha2 = "0.10"

[features]
default = ["mvp_runtime"]
mvp_runtime = []
optical_flow = []
crypto_pki = ["dep:blake3", "dep:chacha20poly1305", "dep:ed25519-dalek"]
sdf_ui = []
cpu_fallback = []
persistent_nonce = []
warm_gpu_context = []
heterogeneous_simd = []
